running lat/long list of coordinates

--- a/WeatherPy.ipynb
+++ b/WeatherPy.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6ea95b2a",
+   "execution_count": null,
+   "id": "8b160b50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c5d008",
+   "id": "a7aa1b3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,21 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "0cd27e2f",
+   "execution_count": null,
+   "id": "33c55eaa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<zip at 0x7f8fda6563c0>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a set of random latitude and longitude combinations.\n",
     "lats = np.random.uniform(low=-90.000, high=90.000, size=1500)\n",
@@ -51,7 +40,113 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d09e7db",
+   "id": "37d1bde0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add the latitudes and longitudes to a list.\n",
+    "coordinates = list(lat_lngs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522fa1fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Use the citipy module to determine city based on latitude and longitude.\n",
+    "from citipy import citipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2491e79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the tuple() function to display the latitude and longitude combinations.\n",
+    "for coordinate in coordinates:\n",
+    "    print(citipy.nearest_city(coordinate[0], coordinate[1]).city_name,\n",
+    "          citipy.nearest_city(coordinate[0], coordinate[1]).country_code)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "2fc7abdf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "602"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a list for holding the cities.\n",
+    "cities = []\n",
+    "# Identify the nearest city for each latitude and longitude combination.\n",
+    "for coordinate in coordinates:\n",
+    "    city = citipy.nearest_city(coordinate[0], coordinate[1]).city_name\n",
+    "\n",
+    "    # If the city is unique, then we will add it to the cities list.\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "# Print the city count to confirm sufficient count.\n",
+    "len(cities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5f8b3c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8826d72",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13b2f2a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9c98668",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8f144e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1938e898",
    "metadata": {},
    "outputs": [],
    "source": []
