created csv file for weather data

--- a/class_practice.ipynb
+++ b/class_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e886f0bb",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "98736869",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7455c39f",
    "metadata": {},
    "outputs": [],
@@ -32,40 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9a2b0e84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "In a First, Washington Will Draft Rules on Workplace Heat Dangers\n",
-      "Covid Vaccine Prompts Strong Immune Response in Younger Children, Pfizer Says\n",
-      "The F.D.A. is likely to make its long-awaited decision on Pfizer boosters this week.\n",
-      "This Powerful Democrat Linked to Fossil Fuels Will Craft the U.S. Climate Plan\n",
-      "Fighting a Pandemic, While Launching Africa’s Health Revolution\n",
-      "SpaceX astronauts will get a health check after splashdown.\n",
-      "The Inspiration4 flight showed space tourism’s potential and limitations.\n",
-      "Are water landings from space safe?\n",
-      "Coming up soon: The astronauts return to Earth.\n",
-      "The Covid Crisis Is Now a Garbage Crisis, Too\n",
-      "They Shunned Covid Vaccines but Embraced Antibody Treatment\n",
-      "The Unconventional Weapon Against Future Wildfires: Goats\n",
-      "SpaceX’s large cupola gave the astronauts, and us, a new window on planet Earth.\n",
-      "Hours before the F.D.A. vote, the C.D.C. released a study showing waning protection of the Pfizer vaccine.\n",
-      "Antony Hewish, Astronomer Honored for the Discovery of Pulsars, Dies at 97\n",
-      "United Nations Warns of ‘Catastrophic Pathway’ With Current Climate Pledges\n",
-      "A talk with Tom Cruise as the astronauts cruise around the planet.\n",
-      "The Pain Wouldn’t Stop — Because Her Medication Had Been Stolen\n",
-      "Where Did It All Go So Wrong for Juul?\n",
-      "From ‘Jeff who?’ to ‘Thank you.’\n",
-      "Sian Proctor is the first Black woman to pilot a spacecraft.\n",
-      "Climate Scientists Forecast High Temperatures Into the Fall\n",
-      "House Panel Expands Inquiry Into Climate Disinformation by Oil Giants\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for article in data_from_api['results']:\n",
     "    print(article['title'])"
@@ -73,82 +43,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "2dae844d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(data_from_api['results'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f616432b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(data_from_api['results'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4afbf9a4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n",
-      "dict_keys(['section', 'subsection', 'title', 'abstract', 'url', 'uri', 'byline', 'item_type', 'updated_date', 'created_date', 'published_date', 'material_type_facet', 'kicker', 'des_facet', 'org_facet', 'per_facet', 'geo_facet', 'multimedia', 'short_url'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for x in data_from_api['results']:\n",
     "    print(x.keys())"
@@ -160,7 +78,9 @@
    "id": "3b2cb77b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "AIzaSyCyCXyfZYeUTlziV7-hut7e942sBq35ugs"
+   ]
   }
  ],
  "metadata": {
