--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -3151,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4603ca23",
    "metadata": {},
    "outputs": [
@@ -4661,7 +4661,55 @@
       "City not found. Skipping...\n",
       "Processing Record 32 of Set 15 | sira\n",
       "City not found. Skipping...\n",
-      "Processing Record 33 of Set 15 | kieta\n"
+      "Processing Record 33 of Set 15 | kieta\n",
+      "City not found. Skipping...\n",
+      "Processing Record 34 of Set 15 | katherine\n",
+      "City not found. Skipping...\n",
+      "Processing Record 35 of Set 15 | bracebridge\n",
+      "City not found. Skipping...\n",
+      "Processing Record 36 of Set 15 | yar-sale\n",
+      "City not found. Skipping...\n",
+      "Processing Record 37 of Set 15 | antalaha\n",
+      "City not found. Skipping...\n",
+      "Processing Record 38 of Set 15 | okha\n",
+      "City not found. Skipping...\n",
+      "Processing Record 39 of Set 15 | seymchan\n",
+      "City not found. Skipping...\n",
+      "Processing Record 40 of Set 15 | porangatu\n",
+      "City not found. Skipping...\n",
+      "Processing Record 41 of Set 15 | romitan\n",
+      "City not found. Skipping...\n",
+      "Processing Record 42 of Set 15 | vila do maio\n",
+      "City not found. Skipping...\n",
+      "Processing Record 43 of Set 15 | carbonia\n",
+      "City not found. Skipping...\n",
+      "Processing Record 44 of Set 15 | lexington\n",
+      "City not found. Skipping...\n",
+      "Processing Record 45 of Set 15 | karpogory\n",
+      "City not found. Skipping...\n",
+      "Processing Record 46 of Set 15 | medicina\n",
+      "City not found. Skipping...\n",
+      "Processing Record 47 of Set 15 | kuusamo\n",
+      "City not found. Skipping...\n",
+      "Processing Record 48 of Set 15 | surt\n",
+      "City not found. Skipping...\n",
+      "Processing Record 49 of Set 15 | shubarshi\n",
+      "City not found. Skipping...\n",
+      "Processing Record 50 of Set 15 | knysna\n",
+      "City not found. Skipping...\n",
+      "Processing Record 1 of Set 16 | boddam\n",
+      "City not found. Skipping...\n",
+      "Processing Record 2 of Set 16 | giyon\n",
+      "City not found. Skipping...\n",
+      "Processing Record 3 of Set 16 | laramie\n",
+      "City not found. Skipping...\n",
+      "Processing Record 4 of Set 16 | bria\n",
+      "City not found. Skipping...\n",
+      "Processing Record 5 of Set 16 | halalo\n",
+      "City not found. Skipping...\n",
+      "-----------------------------\n",
+      "Data Retrieval Complete      \n",
+      "-----------------------------\n"
      ]
     }
    ],
@@ -4734,7 +4782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "a836f8e1",
    "metadata": {},
    "outputs": [
@@ -4744,7 +4792,7 @@
        "0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4765,7 +4813,7 @@
     "city_data_df = pd.DataFrame(city_data)\n",
     "\n",
     "# Rearrange column order\n",
-    "new_column_order = [\"City\", \"Country\", \"Date\", \"Lat\", \"Lng\", \"Max Temp\", \"Humidity\", \"Cloudiness\", \"Wind Speed\"]\n",
+    "new_column_order = [\"City\", \"Country\", \"Date\", \"Lat\", \"Lng\", \"Max Temp\", \"Humidity\", \"Cloudiness\", \"Wind Speed\", \"Current Description\"]\n",
     "city_data_df[new_column_order]"
    ]
   },
@@ -4801,325 +4849,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6bbf6b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the scatterplot for Max Temp\n",
-    "# Import the time module.\n",
-    "import time\n",
-    "\n",
-    "# Build the scatter plot for latitude vs. max temperature.\n",
-    "plt.scatter(lats,\n",
-    "            max_temps,\n",
-    "            edgecolor=\"black\", linewidths=1, marker=\"o\",\n",
-    "            alpha=0.8, label=\"Cities\")\n",
-    "\n",
-    "# Incorporate the other graph properties.\n",
-    "plt.title(f\"City Latitude vs. Max Temperature \"+ time.strftime(\"%x\"))\n",
-    "plt.ylabel(\"Max Temperature (F)\")\n",
-    "plt.xlabel(\"Latitude\")\n",
-    "plt.grid(True)\n",
-    "\n",
-    "# Save the figure.\n",
-    "plt.savefig(\"weather_data/Fig1.png\")\n",
-    "\n",
-    "# Show plot.\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8941c69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the scatterplot for Humidity by refactoring the code\n",
-    "# Import the time module.\n",
-    "import time\n",
-    "\n",
-    "# Build the scatter plot for latitude vs. max temperature.\n",
-    "plt.scatter(lats,\n",
-    "            humidity,\n",
-    "            edgecolor=\"black\", linewidths=1, marker=\"o\",\n",
-    "            alpha=0.8, label=\"Cities\")\n",
-    "\n",
-    "# Incorporate the other graph properties.\n",
-    "plt.title(f\"City Latitude vs. Humidity (%) \"+ time.strftime(\"%x\"))\n",
-    "plt.ylabel(\"Humidity (%)\")\n",
-    "plt.xlabel(\"Latitude\")\n",
-    "plt.grid(True)\n",
-    "\n",
-    "# Save the figure.\n",
-    "plt.savefig(\"weather_data/Fig2.png\")\n",
-    "\n",
-    "# Show plot.\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e5abb1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the scatterplot for cloudiness\n",
-    "# Import the time module.\n",
-    "import time\n",
-    "\n",
-    "# Build the scatter plot for latitude vs. max temperature.\n",
-    "plt.scatter(lats,\n",
-    "            cloudiness,\n",
-    "            edgecolor=\"black\", linewidths=1, marker=\"o\",\n",
-    "            alpha=0.8, label=\"Cities\")\n",
-    "\n",
-    "# Incorporate the other graph properties.\n",
-    "plt.title(f\"City Latitude vs. Cloudiness(%) \"+ time.strftime(\"%x\"))\n",
-    "plt.ylabel(\"Cloudiness(%)\")\n",
-    "plt.xlabel(\"Latitude\")\n",
-    "plt.grid(True)\n",
-    "\n",
-    "# Save the figure.\n",
-    "plt.savefig(\"weather_data/Fig3.png\")\n",
-    "\n",
-    "# Show plot.\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a09cc85c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create the scatterplot for Windspeed\n",
-    "# Import the time module.\n",
-    "import time\n",
-    "\n",
-    "# Build the scatter plot for latitude vs. max temperature.\n",
-    "plt.scatter(lats,\n",
-    "            wind_speed,\n",
-    "            edgecolor=\"black\", linewidths=1, marker=\"o\",\n",
-    "            alpha=0.8, label=\"Cities\")\n",
-    "\n",
-    "# Incorporate the other graph properties.\n",
-    "plt.title(f\"City Latitude vs. Wind Speed (mph) \"+ time.strftime(\"%x\"))\n",
-    "plt.ylabel(\"Wind Speed (mph)\")\n",
-    "plt.xlabel(\"Latitude\")\n",
-    "plt.grid(True)\n",
-    "\n",
-    "# Save the figure.\n",
-    "plt.savefig(\"weather_data/Fig4.png\")\n",
-    "\n",
-    "# Show plot.\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e51829e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "northern_hemi_df = city_data_df.loc[city_data_df[\"Lat\"] >= 0]\n",
-    "northern_hemi_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "36c2d9b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "southern_hemi_df = city_data_df.loc[city_data_df[\"Lat\"] <= 0]\n",
-    "southern_hemi_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d55cbd2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import linregress\n",
-    "from scipy.stats import linregress\n",
-    "\n",
-    "# Create a function to create perform linear regression on the weather data\n",
-    "# and plot a regression line and the equation with the data.\n",
-    "def plot_linear_regression(x_values, y_values, title, y_label, text_coordinates):\n",
-    "\n",
-    "    # Run regression on hemisphere weather data.\n",
-    "    (slope, intercept, r_value, p_value, std_err) = linregress(x_values, y_values)\n",
-    "\n",
-    "    # Calculate the regression line \"y values\" from the slope and intercept.\n",
-    "    regress_values = x_values * slope + intercept\n",
-    "    # Get the equation of the line.\n",
-    "    line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
-    "    # Create a scatter plot and plot the regression line.\n",
-    "    plt.scatter(x_values,y_values)\n",
-    "    plt.plot(x_values,regress_values,\"r\")\n",
-    "    # Annotate the text for the line equation.\n",
-    "    plt.annotate(line_eq, text_coordinates, fontsize=15, color=\"red\")\n",
-    "    plt.title(title)\n",
-    "    plt.xlabel('Latitude')\n",
-    "    plt.ylabel(y_label)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57b109bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Linear regression on the Northern Hemisphere (6.4.2)\n",
-    "x_values = northern_hemi_df[\"Lat\"]\n",
-    "y_values = northern_hemi_df[\"Max Temp\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Northern Hemisphere \\\n",
-    "                        for Maximum Temperature', 'Max Temp',(10,40))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a638b759",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Linear regression on the Southern Hemisphere (6.4.2)\n",
-    "x_values = southern_hemi_df[\"Lat\"]\n",
-    "y_values = southern_hemi_df[\"Max Temp\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Southern Hemisphere \\\n",
-    "                        for Maximum Temperature', 'Max Temp',(-50,85))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbe94025",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Humidity : Linear regression on the Northern Hemisphere (6.4.2)\n",
-    "x_values = northern_hemi_df[\"Lat\"]\n",
-    "y_values = northern_hemi_df[\"Humidity\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Northern Hemisphere \\\n",
-    "                        for % Humidity', '% Humidity',(40,10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6c90655",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Humidity : Linear regression on the Southern Hemisphere (6.4.2)\n",
-    "x_values = southern_hemi_df[\"Lat\"]\n",
-    "y_values = southern_hemi_df[\"Humidity\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Southern Hemisphere \\\n",
-    "                        for % Humidity', '% Humidity',(-50,15))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bfa18f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cloudiness : Linear regression on the Northern Hemisphere (6.4.2)\n",
-    "x_values = northern_hemi_df[\"Lat\"]\n",
-    "y_values = northern_hemi_df[\"Cloudiness\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Northern Hemisphere \\\n",
-    "                        for % Cloudiness', '% Cloudiness',(40,30))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f247c11f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Cloudiness : Linear regression on the Northern Hemisphere (6.4.2)\n",
-    "x_values = southern_hemi_df[\"Lat\"]\n",
-    "y_values = southern_hemi_df[\"Cloudiness\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Southern Hemisphere \\\n",
-    "                        for % Cloudiness', '% Cloudiness',(-50,60))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c9b6ab5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Wind Speed : Linear regression on the Northern Hemisphere (6.4.2)\n",
-    "x_values = northern_hemi_df[\"Lat\"]\n",
-    "y_values = northern_hemi_df[\"Wind Speed\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Northern Hemisphere \\\n",
-    "                        for Wind Speed (mph)', 'Wind Speed (mph)',(45,15))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19d571eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Wind Speed : Linear regression on the Southern Hemisphere (6.4.2)\n",
-    "x_values = southern_hemi_df[\"Lat\"]\n",
-    "y_values = southern_hemi_df[\"Wind Speed\"]\n",
-    "\n",
-    "# Call the function.\n",
-    "plot_linear_regression(x_values, y_values,\n",
-    "                       'Linear Regression on the Southern Hemisphere \\\n",
-    "                        for Wind Speed (mph)', 'Wind Speed (mph)',(-50,15))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6a3cd51a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "295a95a4",
    "metadata": {},
    "outputs": [],
    "source": []
